--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
       </div>
     </div>
     <div class="aligns">
-      <button class="left">по левому краю</button>
-      <button class="center">по центру</button>
-      <button class="right">по правому краю</button>
+      <button class="aligns__button" data-align="align-left">по левому краю</button>
+      <button class="aligns__button" data-align="align-center">по центру</button>
+      <button class="aligns__button" data-align="align-right">по правому краю</button>
     </div>
     
     <div class="header__color-picker">
@@ -39,7 +39,7 @@
   </header>
   <main class="main">
     <div class="list">
-      <textarea class="list__input"><div>1</div></textarea>
+      <div class="list__input" contenteditable><span>hello!</span></div>
     </div>
   </main>
   <script src="index.js"></script>
